// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renders 1`] = `
.c1 {
  font-size: 32px;
  margin: 0px;
  font-weight: 400;
}

.c0 {
  line-height: 1.25;
}

<h2
  className="c0 c1"
/>
`;

exports[`Heading uses <Text> component properties 1`] = `
.c1 {
  font-size: 32px;
  margin: 0px;
  color: #e42d42;
  text-align: center;
  font-weight: 400;
}

.c0 {
  line-height: 1.25;
}

<h2
  className="c0 c1"
  color="primary"
/>
`;

exports[`Heading with default theme font size, when fontSize prop not used 1`] = `
.c1 {
  font-size: 32px;
  margin: 0px;
  font-weight: 400;
}

.c0 {
  line-height: 1.25;
}

<h2
  className="c0 c1"
/>
`;

exports[`Heading with h1-h6 dot-notation 1`] = `
.c0 {
  line-height: 1.25;
}

<h1
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 2`] = `
.c0 {
  line-height: 1.25;
}

<h2
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 3`] = `
.c0 {
  line-height: 1.25;
}

<h3
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 4`] = `
.c0 {
  line-height: 1.25;
}

<h4
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 5`] = `
.c0 {
  line-height: 1.25;
}

<h5
  className="c0"
/>
`;

exports[`Heading with h1-h6 dot-notation 6`] = `
.c0 {
  line-height: 1.25;
}

<h6
  className="c0"
/>
`;
